--- a/Loops2.html
+++ b/Loops2.html
@@ -134,6 +134,8 @@
 
       //forEach on Array
       // var arr = ["hema","rita","meeta"];
+      // arr.forEach((s)=>{document.write(s)});
+
       // arr.forEach((element,index) => {
       //   document.write(index + " "+element + "<br>");
       // });
