--- a/localstorage.html
+++ b/localstorage.html
@@ -8,14 +8,36 @@
 </head>
 <body>
   <script>
-    localStorage.setItem("fruits","Mango");
-    localStorage.setItem("todo","buy tea-powder");
-    localStorage.setItem("todo","buy cake");
-    localStorage.removeItem("fruits");
-    localStorage.clear();
+    // localStorage.setItem("fruits","Mango");
+    // localStorage.setItem("todo","buy tea-powder");
+    // localStorage.setItem("todo","buy cake");
+    // localStorage.removeItem("fruits");
+    // localStorage.clear();
+    // console.log(localStorage.getItem("fruits"));
 
+    //==================================================
+    //DATE : 11/09/2022
+    //=============================================
 
-    console.log(localStorage.getItem("fruits"));
+    const session = {
+      screens : [],
+      state : true
+    };
+
+    session.screens.push({name:"screenA", width:200, height : 300});
+    session.screens.push({name:"screenB", width:210, height : 200});
+    session.screens.push({name:"screenC", width:400, height : 230});
+    session.screens.push({name:"screenD", width:300, height : 120});
+    session.screens.push({name:"screenE", width:100, height : 340});
+
+    console.log(session);
+
+    const sessionStr = JSON.stringify(session);
+    localStorage.setItem("Session",sessionStr);
+
+    let sessionStrFrmLS = localStorage.getItem("Session");
+    console.log(JSON.parse(sessionStrFrmLS));
+
   </script>
 </body>
 </html>
