--- a/24_2_AsyncAwait.html
+++ b/24_2_AsyncAwait.html
@@ -36,17 +36,29 @@
 
       //=================================================
 
-      async function test() {
-        // const response = await fetch("24_student_data.json");
-        // const data = await response.json();
-        // return data;
-        
-      }
-      // console.log(test());
+      // const test = async () => {
+      //   return (await fetch("24_student_data.json")).json();
+      // };
+      // test().then((res) => {
+      //   console.log(res);
+      // }).catch((error) => {
+      //   console.log(error);
+      // });
+
+      //========================================================
+      //TRY CATCH
+      //==========================================================
+
+      const test = async () => {
+        try{
+          return (await fetch("24_student_data.json")).json();
+        }
+        catch(error){
+          console.log(error);
+        }
+      };
       test().then((res) => {
         console.log(res);
-      }).catch((error) => {
-        console.log(error);
       });
     </script>
   </body>
