--- a/24_fetch.html
+++ b/24_fetch.html
@@ -80,19 +80,19 @@
       //============================================================
       //INSERTING DATA INTO THE SERVER: POST METHOD
       //===========================================================
-      // fetch("https://jsonplaceholder.typicode.com/posts", {
-      //   method: "POST",
-      //   body: JSON.stringify({
-      //     title: "foo",
-      //     body: "bar",
-      //     userId: 1,
-      //   }),
-      //   headers: {
-      //     "Content-type": "application/json; charset=UTF-8",
-      //   },
-      // })
-      //   .then((response) => response.json())
-      //   .then((json) => console.log(json));
+      fetch("https://jsonplaceholder.typicode.com/posts", {
+        method: "POST",
+        body: JSON.stringify({
+          title: "foo",
+          body: "bar",
+          userId: 1,
+        }),
+        headers: {
+          "Content-type": "application/json; charset=UTF-8",
+        },
+      })
+        .then((response) => response.json())
+        .then((json) => console.log(json));
 
       //--------------------------------------------------------
       // <form action="" id="myForm">
