--- a/25_MapFilterReduce.html
+++ b/25_MapFilterReduce.html
@@ -70,10 +70,10 @@
 
       // now with reduce , the above code can be written as
 
-      // let arr = [245,3,4];
+      let arr = [245,3,4];
       // let output = arr.reduce((acc, cur) => {
       //   acc = acc + cur;
-      debugger;
+      
 
       //   return acc;
       // }, 0 );
