--- a/JS_Practise.html
+++ b/JS_Practise.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./27Sept.js"></script>
+  <!-- <script src="./27Sept.js"></script> -->
+  <script src="./28Sept.js"></script>
 </body>
 </html>
