--- a/JS_Practise.html
+++ b/JS_Practise.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <!-- <script src="./27Sept.js"></script> -->
-  <script src="./28Sept.js"></script>
+  <!-- <script src="./28Sept.js"></script> -->
+  <script src="./29Sept.js"></script>
 </body>
 </html>
