--- a/JS_Practise.html
+++ b/JS_Practise.html
@@ -9,6 +9,7 @@
 <body>
   <!-- <script src="./27Sept.js"></script> -->
   <!-- <script src="./28Sept.js"></script> -->
-  <script src="./29Sept.js"></script>
+  <!-- <script src="./29Sept.js"></script> -->
+  <script src="./30Sept.js"></script>
 </body>
 </html>
