--- a/JS_Practise.html
+++ b/JS_Practise.html
@@ -11,6 +11,7 @@
   <!-- <script src="./28Sept.js"></script> -->
   <!-- <script src="./29Sept.js"></script> -->
   <!-- <script src="./30Sept.js"></script> -->
-  <script src="./Oct01.js"></script>
+  <!-- <script src="./Oct01.js"></script> -->
+  <script src="./Oct03_closure.js"></script>
 </body>
 </html>
