--- a/JS_Practise.html
+++ b/JS_Practise.html
@@ -12,6 +12,7 @@
   <!-- <script src="./29Sept.js"></script> -->
   <!-- <script src="./30Sept.js"></script> -->
   <!-- <script src="./Oct01.js"></script> -->
-  <script src="./Oct03_closure.js"></script>
+  <!-- <script src="./Oct03_closure.js"></script> -->
+  <script src="./Oct_05_this.js"></script>
 </body>
 </html>
