--- a/JS_Practise.html
+++ b/JS_Practise.html
@@ -13,6 +13,7 @@
   <!-- <script src="./30Sept.js"></script> -->
   <!-- <script src="./Oct01.js"></script> -->
   <!-- <script src="./Oct03_closure.js"></script> -->
-  <script src="./Oct_05_this.js"></script>
+  <!-- <script src="./Oct_05_this.js"></script> -->
+  <script src="./Oct_06.js"></script>
 </body>
 </html>
