--- a/restAndSpread.html
+++ b/restAndSpread.html
@@ -81,13 +81,33 @@
     // let arr = [1,2,3,4];
     // console.log([...arr]); //again converted to array
 
-    let arr1 = [2,3,4];
-    // let arr2 = arr1;
+    // let arr1 = [2,3,4];
+    // // let arr2 = arr1;
     
-    arr2 = [...arr1];   //it will clone arr1
-    arr1.push(99);      //only arr1 will be getting this forth value but not arr2
-    console.log(arr1);
-    console.log(arr2);
+    // arr2 = [...arr1];   //it will clone arr1
+    // arr1.push(99);      //only arr1 will be getting this forth value but not arr2
+    // console.log(arr1);
+    // console.log(arr2);
+
+    //============================================================================
+    // function sum(...inputs){  //inputs ==> array
+    //   console.log(...inputs); //inputs ==> values
+    //   let sumArr = 0;
+    //   for(let i of inputs){
+    //     sumArr += i;
+    //   }
+    //   return sumArr;
+    // }
+    // let r = sum(1,2,3,4,5,6,7,8,9,10);
+    // console.log(r);
+    //================================================================================
+
+    function sum(a,b,c){
+      console.log(a+b+c);
+    }
+    let arr = [1,2,3];
+    console.log(...arr);
+    // sum(...arr);
 
 
 
