--- a/JS_Practise.html
+++ b/JS_Practise.html
@@ -15,6 +15,7 @@
   <!-- <script src="./Oct03_closure.js"></script> -->
   <!-- <script src="./Oct_05_this.js"></script> -->
   <!-- <script src="./Oct_06.js"></script> -->
-  <script src="./Oct_07.js"></script>
+  <!-- <script src="./Oct_07.js"></script> -->
+  <script src="./Oct_10.js"></script>
 </body>
 </html>
