--- a/24_2_AsyncAwait.html
+++ b/24_2_AsyncAwait.html
@@ -1,65 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AsyncAwait 2</title>
-  </head>
-  <body>
-    <script>
-      // const test = async () => {
-      //   return "Hello";
-      // }
-      // console.log(test());
-      //-------------------------------------
-      // const test = async () => "Hello";
-      // test().then((res) => console.log(res));
-      //--------------------------------------
-      // const test = async () => {
-      //   return "Hello world";
-      // }
 
-      // test().then((result) => {
-      //   console.log(result);
-      // });
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AsyncAwait 2</title>
+</head>
 
-      //==============================================
+<body>
+  <script>
+    // const test = async () => {
+    //   return "Hello";
+    // }
+    // console.log(test());
+    //-------------------------------------
+    // const test = async () => "Hello";
+    // test().then((res) => console.log(res));
+    //--------------------------------------
+    // const test = async () => {
+    //   return "Hello world";
+    // }
 
-      // const testAsync = async () => {
-      //   console.log("A");
-      //   await console.log("A1");
-      //   console.log("B");
-      //   console.log("C");
-      // };
-      // testAsync();
+    // test().then((result) => {
+    //   console.log(result);
+    // });
 
-      //=================================================
+    //==============================================
 
-      // const test = async () => {
-      //   return (await fetch("24_student_data.json")).json();
-      // };
-      // test().then((res) => {
-      //   console.log(res);
-      // }).catch((error) => {
-      //   console.log(error);
-      // });
+    // const testAsync = async () => {
+    //   console.log("A");
+    //   await console.log("A1");
+    //   console.log("B");
+    //   console.log("C");
+    // };
+    // testAsync();
 
-      //========================================================
-      //TRY CATCH
-      //==========================================================
+    //=================================================
 
-      const test = async () => {
-        try{
-          return (await fetch("24_student_data.json")).json();
-        }
-        catch(error){
-          console.log(error);
-        }
-      };
-      test().then((res) => {
-        console.log(res);
-      });
-    </script>
-  </body>
+    // const test = async () => {
+    //   return (await fetch("24_student_data.json")).json();
+    // };
+    // test().then((res) => {
+    //   console.log(res);
+    // }).catch((error) => {
+    //   console.log(error);
+    // });
+
+    //========================================================
+    //TRY CATCH
+    //==========================================================
+
+  //   const test = async () => {
+  //     try {
+  //       return (await fetch("24_student_data.json")).json();
+  //     }
+  //     catch (error) {
+  //       console.log(error);
+  //     }
+  //   };
+  //   test().then((res) => {
+  //     console.log(res);
+  //   });
+  // </script>
+</body>
+
 </html>
