--- a/22PromisesBasics.html
+++ b/22PromisesBasics.html
@@ -1,55 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Promises Basics</title>
-  </head>
-  <body>
-    <script>
-            // let complete = false;
 
-            // let prom = new Promise((resolve, reject)=>{
-            //   if(complete){
-            //     resolve("I m successful !");
-            //   }
-            //   else{
-            //     reject("I m failed !");
-            //   }
-            // });
-            //-----------------------------------------------
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Promises Basics</title>
+</head>
 
-            // function promFunc(complete) {
-            //   return new Promise((resolve, reject) => {
+<body>
+  <script>
+    let complete = false;
 
-            //     console.log("Fetching data....Plz wait!");
-            //     setTimeout(()=>{
-            //       if (complete) {
-            //       resolve("I m successful !");
-            //     } else {
-            //       reject("Error..I m failed !");
-            //     }
-            //     }, 2000);
+    let prom = new Promise((resolve, reject) => {
+      if (complete) {
+        resolve("I m successful !");
+      }
+      else {
+        reject("I m failed !");
+      }
+    });
+    prom.then((resolve) => console.log(resolve)).catch((reject) => console.log(reject));
+    //-----------------------------------------------
 
-            //   });
-            // }
+    // function promFunc(complete) {
+    //   return new Promise((resolve, reject) => {
 
-            // // let onfulfill = (result) => {     //from resolve above
-            // //   console.log(result);
-            // // }
+    //     console.log("Fetching data....Plz wait!");
+    //     setTimeout(()=>{
+    //       if (complete) {
+    //       resolve("I m successful !");
+    //     } else {
+    //       reject("Error..I m failed !");
+    //     }
+    //     }, 2000);
 
-            // // let onreject = (error) => {     //from reject above
-            // //   console.log(error);
-            // // }
+    //   });
+    // }
 
-            // // promFunc(false).then(onfulfill).catch(onreject);
+    // // let onfulfill = (result) => {     //from resolve above
+    // //   console.log(result);
+    // // }
 
-            // promFunc(true).then((result)=>{
-            //   console.log(result);
-            // }).catch((error)=>{
-            //   console.log(error);
-            // });
+    // // let onreject = (error) => {     //from reject above
+    // //   console.log(error);
+    // // }
+
+    // // promFunc(false).then(onfulfill).catch(onreject);
+
+    // promFunc(true).then((result) => {
+    //   console.log(result);
+    // }).catch((error) => {
+    //   console.log(error);
+    // });
 
             //==========================================================================
 
@@ -85,13 +88,14 @@
 
       // The function delay(ms) should return a promise. That promise should resolve after ms milliseconds, so that we can add .then to it, like this:
 
-      function delay(ms) {
-        return new Promise((resolve)=>{
-          setTimeout(resolve,ms);
-        });
-      }
+      // function delay(ms) {
+      //   return new Promise((resolve)=>{
+      //     setTimeout(resolve,ms);
+      //   });
+      // }
 
-      delay(3000).then(() => alert('runs after 3 seconds'));
-    </script>
-  </body>
+      // delay(3000).then(() => alert('runs after 3 seconds'));
+  </script>
+</body>
+
 </html>
